--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -267,4 +267,22 @@
   <data name="tryAgainCall" xml:space="preserve">
     <value>Try again</value>
   </data>
+  <data name="Reason" xml:space="preserve">
+    <value>Reason</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+  </data> 
+  <data name="Marked at" xml:space="preserve">
+    <value>Marked at</value>
+  </data>
+  <data name="Expected" xml:space="preserve">
+    <value>Expected</value>
+  </data>
+  <data name="Absence recorded" xml:space="preserve">
+    <value>Absence recorded</value>
+  </data>
+  <data name="Thanks" xml:space="preserve">
+    <value>Thanks for letting us know</value>
+  </data>
 </root>
