--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -184,13 +184,23 @@
     <value>Пожалуйста, опишите ваше состояние или причину отсутствия:</value>
   </data>
   <data name="OnTheWayPrompt" xml:space="preserve">
-    <value>🚗 Вы в пути!\n\nПожалуйста, укажите:\n1. Причину опоздания\n2. Ожидаемое время прибытия (формат: ЧЧ:ММ)\n\nПример: "Пробка, 10:30"</value>
+    <value>🚗 Вы в пути!
+        Пожалуйста, укажите:  
+        Причину опоздания. 
+        Ожидаемое время прибытия (формат: ЧЧ:ММ)
+        Пример: "Пробка, 10:30"
+    </value>
   </data>
   <data name="OversleptPrompt" xml:space="preserve">
-    <value>😴 **Проспал**\n\nКогда вы планируете прибыть?</value>
+    <value>😴 **Проспал**
+        Когда вы планируете прибыть?  
+    </value>
   </data>
   <data name="OtherReasonPrompt" xml:space="preserve">
-    <value>Пожалуйста, укажите:\n1. Причину отсутствия\n2. Ожидаемое время прибытия, если придете (формат: ЧЧ:ММ) или напишите "отсутствую", если не придете\n\nПример: "Визит к врачу, 14:00" или "Семейные обстоятельства, отсутствую"</value>
+    <value>Пожалуйста, укажите:
+        Причину отсутствия. 
+        Ожидаемое время прибытия, если придете (формат: ЧЧ:ММ) или напишите "отсутствую", если не придете
+        Пример: "Визит к врачу, 14:00" или "Семейные обстоятельства, отсутствую"</value>
   </data>
   <data name="InvalidTimeFormat" xml:space="preserve">
     <value>❌ Пожалуйста, укажите время в правильном формате (ЧЧ:ММ).</value>
