Refactor TelegramWebhookController to remove ApiController attribute
Update Program.cs to change environment check for Swagger and remove unused authorization middleware

Remove GetDailyAttendance and GetTodayAttendance queries and their handlers

Update IAttendanceReportService to include detailed attendance retrieval

Modify ITelegramKeyboardService and ITelegramMessageService to include isManager parameter in main menu and message display methods

Add AttendanceStats and AttendanceDetails resource keys

Implement AttendanceReportService to generate daily attendance reports and detailed attendance

Create AttendanceStatsCommandHandler and AttendanceDetailsCommandHandler for handling attendance statistics and details requests

Update User entity to change Role property type from int to string and adjust related methods

Add migration for UserRole changes in the database schema

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -295,4 +295,10 @@
   <data name="Thanks" xml:space="preserve">
     <value>Thanks for letting us know</value>
   </data>
+  <data name="AttendanceStats" xml:space="preserve">
+    <value>📊 Attendance Stats</value>
+  </data>
+  <data name="AttendanceDetails" xml:space="preserve">
+    <value>📋 Detailed Attendance</value>
+  </data>
 </root>
