Add settings command handler and related localization resources

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -301,4 +301,7 @@
   <data name="AttendanceDetails" xml:space="preserve">
     <value>📋 Detailed Attendance</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>⚙️Settings</value>
+  </data>
 </root>
