--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -301,4 +301,7 @@
   <data name="AttendanceDetails" xml:space="preserve">
     <value>📋 Подробная посещаемость</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>⚙️Настройки</value>
+  </data>
 </root>
