--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -304,4 +304,19 @@
   <data name="Settings" xml:space="preserve">
     <value>⚙️Настройки</value>
   </data>
+  <data name="CreateEvent" xml:space="preserve">
+    <value>📅 Создать событие</value>
+  </data>
+  <data name="EnterEventDescription" xml:space="preserve">
+    <value>Описание события</value>
+  </data>
+    <data name="EnterEventTime" xml:space="preserve">
+    <value>Введите время события (yyyy-MM-dd HH:mm)</value>
+  </data>
+  <data name="EventCreated" xml:space="preserve">
+    <value>Событие создано</value>
+  </data>
+  <data name="EventReminder" xml:space="preserve">
+    <value>Напоминание о событии</value>
+  </data>
 </root>
