Refactor event command handling to restrict event creation to managers and enhance logging for event reminders

--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -325,4 +325,7 @@
   <data name="NoEvents" xml:space="preserve">
     <value>No upcoming events</value>
   </data>
+  <data name="OnlyManagersCanCreateEvents" xml:space="preserve">
+    <value>Only managers can create events</value>
+  </data>
 </root>
