--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -325,4 +325,7 @@
   <data name="NoEvents" xml:space="preserve">
     <value>Предстоящих событий нет</value>
   </data>
+  <data name="OnlyManagersCanCreateEvents" xml:space="preserve">
+    <value>Создавать события могут только менеджеры</value>
+  </data>
 </root>
