--- a/DT_HR.Application/Resources/SharedResource.uz.resx
+++ b/DT_HR.Application/Resources/SharedResource.uz.resx
@@ -97,7 +97,7 @@
     <value>✍️ Telefon raqamini kiritish</value>
   </data>
   <data name="WhatWouldYouLikeToDo" xml:space="preserve">
-    <value>Bugun nima qilmoqchisiz?</value>
+    <value>keyingi ishimiz nima?</value>
   </data>
   
   <data name="PleaseEnterPhoneNumber" xml:space="preserve">
