--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -97,7 +97,7 @@
     <value>✍️ Enter Phone Number</value>
   </data>
   <data name="WhatWouldYouLikeToDo" xml:space="preserve">
-    <value>What would you like to do today?</value>
+    <value>What would you like to do next?</value>
   </data>
   
   <data name="PleaseEnterPhoneNumber" xml:space="preserve">
@@ -153,7 +153,7 @@
   </data>
   
   <data name="CheckOutCompleted" xml:space="preserve">
-    <value>Check-out completed! Have a great day!</value>
+    <value>Check-out completed!</value>
   </data>
   <data name="CheckOutFailed" xml:space="preserve">
     <value>Check-out failed: {0}</value>
