--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -311,7 +311,7 @@
     <value>Описание события</value>
   </data>
     <data name="EnterEventTime" xml:space="preserve">
-    <value>Введите время события (yyyy-MM-dd HH:mm)</value>
+    <value>Введите время события (dd-MM-yyyy HH:mm)</value>
   </data>
   <data name="EventCreated" xml:space="preserve">
     <value>Событие создано</value>
@@ -338,10 +338,10 @@
     <value>⏰ Расчетное время вашего прибытия уже прошло. Пожалуйста, зарегистрируйтесь, если вы прибыли.</value>
   </data>
   <data name="EnterBirthDate" xml:space="preserve">
-    <value>Введите дату рождения (yyyy-MM-dd)</value>
+    <value>Введите дату рождения (dd-MM-yyyy)</value>
   </data>
   <data name="InvalidDateFormat" xml:space="preserve">
-    <value>❌ Неверный формат даты. Используйте yyyy-MM-dd.</value>
+    <value>❌ Неверный формат даты. Используйте dd-MM-yyyy.</value>
   </data>
   <data name="HappyBirthday" xml:space="preserve">
     <value>🎉 С Днём Рождения!</value>
