--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -332,7 +332,7 @@
     <value>✅ Спасибо, что зашли вовремя! Хорошего вам дня на работе.</value>
   </data>
   <data name="CheckInCheck" xml:space="preserve">
-    <value>Пожалуйста, не забудьте зарегистрироваться</value>
+    <value>📋Доброе утро, ты на работе?</value>
   </data>
   <data name="TimePassed" xml:space="preserve">
     <value>⏰ Расчетное время вашего прибытия уже прошло. Пожалуйста, зарегистрируйтесь, если вы прибыли.</value>
