--- a/DT_HR.Application/Resources/SharedResource.uz.resx
+++ b/DT_HR.Application/Resources/SharedResource.uz.resx
@@ -332,7 +332,7 @@
     <value>✅ O'z vaqtida ro'yxatdan o'tganingiz uchun tashakkur! Ishda kuningiz yaxshi o'tsin.</value>
   </data>
   <data name="CheckInCheck" xml:space="preserve">
-    <value>Roʻyxatdan oʻtishni unutmang</value>
+    <value>📋xayrli tong, siz ish joyingizdamisiz</value>
   </data>
   <data name="TimePassed" xml:space="preserve">
     <value>⏰ Taxminiy kelish vaqtingiz oʻtdi. Iltimos, kelganingizni tekshiring.</value>
