--- a/DT_HR.Application/Resources/SharedResource.en.resx
+++ b/DT_HR.Application/Resources/SharedResource.en.resx
@@ -402,6 +402,13 @@ Safe travels! 🚗💨
     <value>✅ETA set</value>
   </data>
   <data name="AbsenceOptionsSelected" xml:space="preserve">
-    <value>✅Absence options selected successfully</value>
+    <value>Absence options selected successfully</value>
+  </data>
+  <data name="Event" xml:space="preserve">
+    <value>Event</value>
+  </data>
+  
+  <data name="UpcomingEvents" xml:space="preserve">
+    <value>Events</value>
   </data>
 </root>
