--- a/DT_HR.Application/Resources/SharedResource.ru.resx
+++ b/DT_HR.Application/Resources/SharedResource.ru.resx
@@ -405,4 +405,7 @@
   <data name="UpcomingEvents" xml:space="preserve">
     <value>События</value>
   </data>
+  <data name="ETA" xml:space="preserve">
+    <value>Пожалуйста, укажите ваше расчетное время прибытия - ЧЧ:ММ</value>
+  </data>
 </root>
